# Coercer

./: .gitignore  Coercer.py  MANIFEST.in  Makefile  README.md  coercer.py  coercer_standalone.py  installer.ps1  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml  python-pip-build.yml  python-poetry-build.yml
coercer/: __init__.py  __main__.py
coercer/core/: Filter.py  MethodFilter.py  Reporter.py  loader.py  utils.py
coercer/core/modes/: coerce.py  fuzz.py  scan.py
coercer/core/tasks/: __init__.py  execute.py  prepare.py
coercer/ext/responder/: Responder.conf  Responder.py  SMB.py  packets.py  settings.py  utils.py
coercer/methods/MS_DFSNM/: NetrDfsAddStdRoot.py  NetrDfsRemoveStdRoot.py
coercer/methods/MS_EFSR/: EfsRpcAddUsersToFile.py  EfsRpcAddUsersToFileEx.py  EfsRpcAddUsersToFileEx.txt  EfsRpcDecryptFileSrv.py  EfsRpcDuplicateEncryptionInfoFile.py  EfsRpcEncryptFileSrv.py  EfsRpcFileKeyInfo.py  EfsRpcOpenFileRaw.py  (+3 more)
coercer/models/: MSPROTOCOLRPCCALL.py
coercer/network/: DCERPCSession.py  DCERPCSessionError.py  Listener.py  __init__.py  authentications.py  rpc.py  smb.py  utils.py
coercer/protocols/: MS_DFSNM.py  MS_EFSR.py  MS_FSRVP.py  MS_RPRN.py  RPCProtocol.py  __init__.py
coercer/structures/: Credentials.py  EscapeCodes.py  MethodType.py  Modes.py  ReportingLevel.py  TestResult.py  TransportType.py
coercer/utils/: Reporter.py  smb.py
documentation/: Coerce-mode.md  Fuzz-mode.md  Scan-mode.md  coercer.html  index.html  search.js
documentation/coercer/: core.html  methods.html  models.html  network.html  protocols.html  structures.html  utils.html
lib/: __init__.py
lib/protocols/: MS_DFSNM.py  MS_EFSR.py  MS_FSRVP.py  MS_RPRN.py  RPCProtocol.py  __init__.py
(+95 files in other folders)
