[tool.poetry]
name = "coercer"
version = "2.3"
description = "A python script to automatically coerce a Windows server to authenticate on an arbitrary machine through 15 methods."
authors = ["p0dalirius"]

[tool.poetry.dependencies]
python = "^3.7"
impacket = "^0.10.0"
xlsxWriter = ">=3.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
coercer="coercer.__main__:main"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
