[project]
name = "coercer"
version = "2.4.3"
description = "A Python script to automatically coerce a Windows server to authenticate on an arbitrary machine through 15 methods."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "p0dalirius" }
]
dependencies = [
    "argcomplete",
    "impacket>=0.10.0",
    "xlsxwriter>=3.0.0",
    "jinja2>=3.1.3",
    "sectools>=1.4.3",
    "netifaces>=0.11.0",
    "psutil",
]

[project.scripts]
coercer="coercer.__main__:main"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
